--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@
     font-style: normal;
 }
 
+.clearfix {
+	clear: both;
+}
+
 body {
 	background: url('../images/bg.png') repeat-x;
 	font-family: Arial, Helvetica, sans-serif;
@@ -33,13 +37,13 @@ body {
 	max-width: 960px;
 	padding: 0 3.125%; /*(30/960px)*/
 	margin: 0 auto;
-	background: rgba(0,0,0, .25);
 }
 
 
 header {
 	height: 75px;
 	width: 100%;
+	margin-bottom: 50px;
 }
 
 #logo_container {
@@ -56,7 +60,7 @@ header {
 nav {
 	height: 75px;
 	float: right;
-	width: 80.7692308%; /*735px/910px*/
+	width: 73.2%; /*735px/910px*/
 	text-transform: uppercase;
 }
 
@@ -111,9 +115,9 @@ a:active {
 	color: #f5f5f5;
 }
 
-#content {
+#content, #container {
 	width: 100%;
-	margin: 70px 0px;
+	min-height: 500px;
 }
 
 #content h1 {
