--- a/css/main.css
+++ b/css/main.css
@@ -17,18 +17,21 @@
 
 body {
 	background: url('../images/bg.png') repeat-x;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family:'Ropa Sans', Arial, Helvetica, sans-serif;
+	color: #333;
 	width: 100%;
 	margin: 0;
 }
 
-#content_sep {
-	height: 60px;
-	background: url('../images/line-shadow-960.png') no-repeat 0 0;
-	margin-top: 300px;
+.content_seperator {
+	height: 20px;
+	background: url('../images/line-shadow-960.png') no-repeat;
+	margin-top: 20px;
+
+	
 }
 
-#content_sep p {
+.content_seperator p{
 	position: relative;
 	left: -9999px;
 }
@@ -39,11 +42,24 @@ body {
 	margin: 0 auto;
 }
 
+#content, #container {
+	width: 100%;
+	min-height: 500px;
+	background: rgba(50,50,50,.035);
+	padding: 25px 20px 0px 20px;
+}
+
+/*#content h1 {
+	color: #333;
+	margin: 0;
+	text-shadow: 0px 1px 0px #fff;
+	font-family: 'ChunkFiveRegular';
+}*/
+
 
 header {
 	height: 75px;
 	width: 100%;
-	margin-bottom: 50px;
 }
 
 #logo_container {
@@ -75,13 +91,16 @@ nav ul li {
 	text-shadow: 1px 1px 0px #999;
 	opacity: .85;
 	padding: 0px;
+	 -webkit-transition: all 0.2s linear;
+ 	 -moz-transition: all 0.2s linear;
+ 	 -o-transition: all 0.2s linear;
+ 	 transition: all  0.2s linear;
 }
 
 nav ul li:hover {
 	opacity: 1;
 	text-decoration: none;
 	border-top: none;
-	
 }
 
 
@@ -95,12 +114,17 @@ nav li a:link {
 
 nav li a:visited {
 	color: #fff;
+	margin: 0 10px;
+	padding-top: 2px;
+	color: #fff;
+	border-top: 1px groove rgba(255,255,255,.5);
+	text-decoration: none;
 }
 
 nav li a:hover {
-	color: #fff;
+	color: #000;
 	text-decoration: none;
-	background: #0084ff;
+	background: #fbed21;
 	-o-border-radius: 10px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
@@ -111,21 +135,23 @@ nav li a:hover {
 	
 }
 
-a:active {
-	color: #f5f5f5;
-}
-
-#content, #container {
-	width: 100%;
-	min-height: 500px;
-}
-
-#content h1 {
-	color: #333;
+nav li a.current_page:link, nav li a.current_page:visited {
+	color: #fff;
+	text-decoration: none;
+	background: #0084ff;
+	-o-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	border-top: none!important;
+	padding: 2px 10px;
 	margin: 0;
-	text-shadow: 0px 1px 0px #fff;
-	font-family: 'ChunkFiveRegular';
+}	
+
+.contact_number {
+	font-weight: bold;
 }
+
 
 footer {
 	box-shadow: 0px -1px 4px rgba(0,0,0, .6);
@@ -137,28 +163,201 @@ footer {
 	font: .8em Arial, Helvetica, sans-serif;
 }
 
+/*================================= Page 1 Sub Section 1 ============================================*/
+section {
+	width: 100%;
+	overflow: auto;
+}
+
+.service_subsection {
+	width: 36.2637363%; /*330px/910px*/
+	height: 250px;
+	float: left;
+	border-right: 2px groove rgba(0,0,0,.2);
+	padding-right: 5px;
+	margin-right: 20px;
+}
+
+
+
+.service_subsection h3 {
+	width: 330px;
+	font: bold 1.15em 'ChunkFiveRegular', sans-serif;
+	text-transform: uppercase;
+	color: #004b91;
+	text-shadow: 0px 1px 0px #fff;
+}
+
+.service_subsection p{
+	width: 310px; /*310px/910px*/
+	font: .9em/1.4 Arial, Helvetica, sans-serif;
+	letter-spacing: .5px;
+
+}
+
+.sub_section_img_container {
+	display: block;
+	width: 28.5714286%; /*100px*/
+	float: left;
+	border-radius: 16px;
+	-webkit-border-radius: 16px;
+	border: 3px inset #fff;
+	box-shadow: 1px 2px 3px rgba(0,0,0,0.7);
+	margin: 0px 15px 5px 0px;
+}
+
+.service_subsection img {
+	max-width: 100%;
+	float: left;
+	border-radius: 16px;
+	-webkit-border-radius: 16px;
+	}
+
+#special_offers{
+	float: right;
+}
+	
+#special_offers h3{
+	font: bold 1.15em 'ChunkFiveRegular', sans-serif;
+	text-transform: uppercase;
+	color: #004b91;
+	text-shadow: 0px 1px 0px #fff;
+}
+
+#special_offers p{
+	font: .9em/1.4 Arial, Helvetica, sans-serif;
+	letter-spacing: .5px;
+	width: 205px;
+}
+
+#special_offers a{
+	display: inline-block;
+	height: 20px;
+	width: 90px;
+	text-align: center;
+	text-transform: uppercase;
+	padding: 5px 5px 0px 5px;
+	font: .75em Arial, Helvetica, sans-serif;
+	color: #fff;
+	text-shadow: 0px 1px 0px rgba(50,50,50,1);
+	border: 1px solid rgba(50,50,50,.5);
+	border-radius: 15px;
+	text-decoration: none;
+	background-image: linear-gradient(bottom, #20451C 7%, #329334 45%, #5BB1AB 95%);
+	background-image: -o-linear-gradient(bottom, #20451C 7%, #329334 45%, #5BB1AB 95%);
+	background-image: -moz-linear-gradient(bottom, #20451C 7%, #329334 45%, #5BB1AB 95%);
+	background-image: -webkit-linear-gradient(bottom, #20451C 7%, #329334 45%, #5BB1AB 95%);
+	background-image: -ms-linear-gradient(bottom, #20451C 7%, #329334 45%, #5BB1AB 95%);
+
+	background-image: -webkit-gradient(
+	linear,	left bottom, left top,
+	color-stop(0.095, #20451C),
+	color-stop(0.45, #329334),
+	color-stop(0.77, #5BB1AB));
+	}
+
+#special_offers a:hover {
+	box-shadow: 0px 0px 4px #20451C;
+}
+
+#special_offers a:active {
+	text-decoration: none;
+	background-image: linear-gradient(top, #20451C 7%, #329334 45%, #5BB1AB 95%);
+	background-image: -o-linear-gradient(top, #20451C 7%, #329334 45%, #5BB1AB 95%);
+	background-image: -moz-linear-gradient(top, #20451C 7%, #329334 45%, #5BB1AB 95%);
+	background-image: -webkit-linear-gradient(top, #20451C 7%, #329334 45%, #5BB1AB 95%);
+	background-image: -ms-linear-gradient(top, #20451C 7%, #329334 45%, #5BB1AB 95%);
+
+	background-image: -webkit-gradient(
+	linear,	left top, left bottom,
+	color-stop(0.095, #20451C),
+	color-stop(0.45, #329334),
+	color-stop(0.77, #5BB1AB));
+
+	}
+
+/*================================= Page 1 Sub Section 2 ============================================*/
+
+#service_descriptions {
+	background: #f5f5f5;
+	border: 1px groove rgba(50,50,50,.5);
+	box-shadow: 0px -2px 4px rgba(50,50,50,.25);
+	
+	background-image: linear-gradient(bottom, #939393 30%, #b4b4b4 95%);
+	background-image: -o-linear-gradient(bottom, #939393 30%, #b4b4b4 95%);
+	background-image: -moz-linear-gradient(bottom, #939393 30%, #b4b4b4 95%);
+	background-image: -webkit-linear-gradient(bottom, #939393 30%, #b4b4b4 95%);
+	background-image: -ms-linear-gradient(bottom, #939393 30%, #b4b4b4 95%);
+
+	background-image: -webkit-gradient(
+	linear,	left bottom, left top,
+	color-stop(0.095, #b4b4b4),
+	color-stop(0.30, #939393));
+		
+}
+
+.service_subsection_secondary {
+	width: 170px;
+	height: 158px;
+	float: left;
+	padding:0px 0px 0px 25px;
+	margin: 20px; 
+}
+
+.service_subsection_secondary h3{
+	font: bold 1.15em 'ChunkFiveRegular', sans-serif;
+	text-transform: uppercase;
+	color: #004b91;
+	text-shadow: 0px 1px 0px #fff;
+}
+
+.service_subsection_secondary p {
+	font: 1em Arial, Helvetica, sans-serif;
+	color: #222;
+	text-shadow: 0px 1px 0px rgba(255,255,255,.7);
+}
+
+.divider {
+	border-left: 1px groove rgba(250,250,250,0.85);
+}
+
+/*================================= Footer ============================================*/
+
+
+
 #footer_container {
-	max-width: 960px;
+	max-width: 910px;
 	margin: 0 auto;
-	padding: 0
+	padding-top: 5px;
+}
+
+#footer_nav_container {
+	float: right;
+	width: 60%;
+	padding: 0;
+	margin: 0;
 }
 
 #footer_nav {
 	float: right;
 	list-style: none;
-	width: 45%;
+}
+
+#footer_nav ul li a{
+	margin-left: 20px;
+	padding: 0px;
 }
 
 #footer_nav li {
  	display:inline-block;
- 	margin:5px 0px 0px 15px;
+ 	margin:5px 0px 0px 25px;
  	padding:0;
  	list-style:none;
 }
 
 #footer_nav li a:link{
 	color: #fff;
-		opacity: .5;
+	opacity: .5;
 }
 
 #footer_nav li a:visited{
