--- a/css/marquee.css
+++ b/css/marquee.css
@@ -6,7 +6,7 @@ margin: 25px 20px 0 0;
 }
 
 #marquee_header h1 {
-	font: bold 2em 'Share';
+	font: bold 2em 'Share-Regular', 'Share', Arial;
 	margin: 0;
 	padding: 0;
 	text-transform: uppercase;
@@ -15,7 +15,7 @@ margin: 25px 20px 0 0;
 }
 
 #marquee_header h2 {
-	font: bold 1.5em/1.25 'Share';
+	font: bold 1.5em/1.25 'Share-Regular', "Share", Arial;
 	margin: 0;
 	padding: 0;
 	color: #333;
@@ -23,7 +23,7 @@ margin: 25px 20px 0 0;
 }
 
 #marquee_header p {
-	font: 1.25em/1.35 'Ropa Sans';
+	font: 1.25em/1.35 'RopaSansRegular', 'Ropa Sans', Arial;
 	margin-top: 10px; 	
 }
 
@@ -64,7 +64,7 @@ margin: 25px 20px 0 0;
 	margin: 0;
 	padding: 15px 0 10px 0;
 	color: #fff;
-	font-family:'Share', Arial, Helvetica, sans-serif;
+	font-family:'Share-Regular', Arial, Helvetica, sans-serif;
 	background: url('../images/template/marquee_caption.png') no-repeat 0 0;
 }
 
@@ -83,7 +83,7 @@ margin: 25px 20px 0 0;
 .marquee_caption_content p {
 	margin-bottom: 10px;
 	color: #fff;
-	font: 1.1em/1.2 "Share";
+	font: 1.1em/1.2 "Share-Regular";
 	position: relative;
 	top: -10px;
 }
