--- a/css/marquee.css
+++ b/css/marquee.css
@@ -27,8 +27,15 @@ margin: 25px 20px 0 0;
 	margin-top: 10px; 	
 }
 
-#company_name  a, a:visited{
+#company_name  a:link, a:visited{
 	color: #0084FF;
+}
+#company_name a:hover {
+	color: #555555;
+}
+
+#company_name a:active {
+	color: #000;
 }
 
 .marquee_container {
